--- a/src/app/sign-prediction/sign-prediction.component.html
+++ b/src/app/sign-prediction/sign-prediction.component.html
@@ -1,41 +1,48 @@
-<div fxLayout="column"
-     fxLayoutAlign="center center">
+<div fxLayout="column">
+  <h4 fxFlexAlign="end">Toggle Prediction with &lt;SPACE&gt;...</h4>
+  <div fxLayout="column"
+       fxLayoutAlign="center center">
 
-  <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
 
-  <ng-container *ngIf="!isPredictionActive">
-    <img src="assets/camera.png" />
-    <button mat-raised-button
-            color="primary"
-            class="block"
-            [disabled]="isLoading"
-            (click)="startWebcam()">Start Prediction</button>
-  </ng-container>
+    <ng-container *ngIf="!isPredictionActive">
+      <img src="assets/camera.png" />
+      <button mat-raised-button
+              color="primary"
+              class="block-50"
+              [disabled]="isLoading"
+              (click)="startWebcam()">Start Prediction</button>
+    </ng-container>
 
-  <mat-card [style.visibility]="isPredictionActive ? 'visible' : 'hidden'">
-    <mat-card-title>
-      Webcam
-    </mat-card-title>
-    <mat-card-content>
-      <div id="canvas-wrapper">
+    <mat-card [style.visibility]="isPredictionActive && !isLoading ? 'visible' : 'collapse'">
+
+      <mat-card-title>
+        Start "Talking"
+      </mat-card-title>
+
+      <mat-card-content [class.canvas-wrapper]="!isLoading">
         <video #video
                playsinline></video>
         <canvas #overlay></canvas>
-      </div>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button
-              (click)="stopWebcam()">Stop Prediction</button>
-    </mat-card-actions>
-  </mat-card>
+      </mat-card-content>
 
-  <ng-container *ngIf="isPredictionActive && (boundingBox$ | async) as boundingBox">
-    <h1>
-      top left x:{{boundingBox?.topLeftX}}, top left y: {{boundingBox?.topLeftY}}
-    </h1>
-    <h1>
-      bottom right x:{{boundingBox?.bottomRightX}}, bottom right y: {{boundingBox?.bottomRightY}}
-    </h1>
-  </ng-container>
+      <mat-card-footer>
+        <button mat-raised-button
+                color="primary"
+                class="block"
+                [disabled]="isLoading"
+                (click)="stopWebcam()">Stop Prediction</button>
+      </mat-card-footer>
+    </mat-card>
 
+    <ng-container *ngIf="isPredictionActive && (boundingBox$ | async) as boundingBox">
+      <h1>
+        top left x:{{boundingBox?.topLeftX}}, top left y: {{boundingBox?.topLeftY}}
+      </h1>
+      <h1>
+        bottom right x:{{boundingBox?.bottomRightX}}, bottom right y: {{boundingBox?.bottomRightY}}
+      </h1>
+    </ng-container>
+
+  </div>
 </div>
