--- a/src/app/sign-prediction/sign-prediction.component.scss
+++ b/src/app/sign-prediction/sign-prediction.component.scss
@@ -3,8 +3,12 @@ mat-spinner {
   z-index: 2;
 }
 
+mat-card {
+  margin-bottom: 10px;
+}
+
 img {
-  max-width: 75%;
+  max-width: 70%;
 }
 
 @media only screen and (min-width: 600px) {
@@ -14,16 +18,19 @@ img {
 }
 
 .block {
+  min-width: 100%;
+}
+
+.block-50 {
   min-width: 50%;
 }
 
-#canvas-wrapper {
-  position: relative;
+.canvas-wrapper {
   display: inline-block;
-  vertical-align: top;
+  margin-bottom: 10px;
 }
 
-#canvas-wrapper > video {
+.canvas-wrapper > video {
   transform: scaleX(-1);
   visibility: hidden;
   width: auto;
