fixed scrollbar bug in firefox

--- a/src/app/sign-prediction/sign-prediction.component.html
+++ b/src/app/sign-prediction/sign-prediction.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column">
   <h4 fxFlexAlign="end">Toggle Prediction with &lt;SPACE&gt;...</h4>
   <div fxLayout="column"
-       fxLayoutAlign="center center">
+       fxLayoutAlign="start center">
 
     <mat-spinner *ngIf="isLoading"></mat-spinner>
 
