--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,18 +1,46 @@
-<mat-toolbar color="primary">
-  <span>Sign-Language</span>
-  <span class="space"></span>
-  <div fxLayout
-       fxLayoutGap="10px"
-       fxLayoutAlign="space-around space-around">
-    <a mat-button
-       routerLink="/sign-prediction"
-       routerLinkActive="active">Sign-Prediction</a>
-    <a mat-button
-       routerLink="/signs"
-       routerLinkActive="active">Signs</a>
-  </div>
+<mat-sidenav-container fullscreen
+                       class="sidenav-container">
+  <mat-sidenav #sidenav
+               class="sidenav">
+    <mat-toolbar color="primary">
+      <span>Sign-Language</span>
+    </mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item
+         routerLinkActive="list-item-active"
+         routerLink="/sign-prediction">
+        <mat-icon mat-list-icon>pan_tool</mat-icon>
+        <span mat-line>Sign-Prediction</span>
+      </a>
 
-</mat-toolbar>
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+      <a mat-list-item
+         routerLinkActive="list-item-active"
+         routerLink="/signs">
+        <mat-icon mat-list-icon>search</mat-icon>
+        <span mat-line>Signs</span>
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-toolbar color="primary">
+    <button mat-icon-button
+            (click)="sidenav.open()"
+            fxHide="true"
+            fxShow.xs>
+      <mat-icon>menu</mat-icon>
+    </button>
+    <span>Sign-Language</span>
+    <span class="space"></span>
+    <div fxLayout
+         fxLayoutGap="10px"
+         fxLayoutAlign="space-around space-around"
+         fxHide.xs>
+      <a mat-button
+         routerLink="/sign-prediction"
+         routerLinkActive="active">Sign-Prediction</a>
+      <a mat-button
+         routerLink="/signs"
+         routerLinkActive="active">Signs</a>
+    </div>
+  </mat-toolbar>
+  <ng-content></ng-content>
+</mat-sidenav-container>
