--- a/src/app/sign-prediction/sign-prediction.component.scss
+++ b/src/app/sign-prediction/sign-prediction.component.scss
@@ -8,7 +8,7 @@ mat-card {
 }
 
 img {
-  max-width: 70%;
+  max-width: 60%;
 }
 
 @media only screen and (min-width: 600px) {
@@ -18,14 +18,15 @@ img {
 }
 
 .block {
-  min-width: 100%;
+  width: 100%;
 }
 
 .block-50 {
-  min-width: 50%;
+  width: 50%;
 }
 
 .canvas-wrapper {
+  position: relative;
   display: inline-block;
   margin-bottom: 10px;
 }
