--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,12 @@
 .container {
   padding: 10px;
+  height: calc(100% - 84px);
+  overflow-y: auto;
+}
+
+@media (max-width: 599px) {
+
+  .container {
+    height: calc(100% - 76px);
+  }
 }
