--- a/src/app/sign-prediction/webcam/webcam.component.scss
+++ b/src/app/sign-prediction/webcam/webcam.component.scss
@@ -46,10 +46,10 @@ img {
 }
 
 #cropped {
-  // visibility: collapse;
-  position: fixed;
-  top: 64px;
-  left: 2px;
-  width: auto;
-  height: auto;
+  visibility: collapse;
+  position: absolute;
+  // top: 64px;
+  // left: 2px;
+  // width: auto;
+  // height: auto;
 }
