image urls für base href angepasst

--- a/src/app/sign-prediction/webcam/webcam.component.html
+++ b/src/app/sign-prediction/webcam/webcam.component.html
@@ -3,7 +3,7 @@
   <mat-spinner *ngIf="isLoading"></mat-spinner>
 
   <ng-container *ngIf="!isPredictionActive">
-    <img src="assets/sign.png"
+    <img src="./assets/sign.png"
          alt="signlanguage icon" />
     <button mat-raised-button
             color="primary"
